--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family:'Neue Machina' ;
-    src: url('/assets/font/NeueMachina-Regular.otf');
+    src: url('./assets/font/NeueMachina-Regular.otf');
 }
 
 body{
@@ -36,7 +36,7 @@ a{
 .principal::after
 {
     content: '';
-    background-image: url('/assets/img/background.svg');
+    background-image: url('./assets/img/background.svg');
     display: inline-block;
     background-repeat: no-repeat;
     background-size: contain;
