--- a/css/experiência.css
+++ b/css/experiência.css
@@ -1,4 +1,4 @@
-.portifolio{
+.Experiência{
     margin: 0;
     padding: 0;
     display: flex;
@@ -8,30 +8,23 @@
     width: 100%;
 }
 
-.portifolio li{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin: 1rem 0;
-
+.Experiência li{
+    margin-bottom: 1rem;
 }
-.portifolio li .title{
+
+.Experiência li .periodo{
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: 1rem;
-    font-weight: 700px;
-    margin: 0;
-    margin-bottom: .5rem;
 }
 
-.portifolio li .title.github::before{
+.Experiência li .periodo::before{
     content: "";
     display: inline-block;
     width: 1rem;
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('/assets/img/github.svg');
+    background-image: url('/img/calender.svg');
     margin-right: .5rem;
 }
