--- a/css/potifolio.css
+++ b/css/potifolio.css
@@ -1,4 +1,4 @@
-.Experiência{
+.portifolio{
     margin: 0;
     padding: 0;
     display: flex;
@@ -8,23 +8,30 @@
     width: 100%;
 }
 
-.Experiência li{
-    margin-bottom: 1rem;
-}
+.portifolio li{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 1rem 0;
 
-.Experiência li .periodo{
+}
+.portifolio li .title{
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-size: 1rem;
+    font-weight: 700px;
+    margin: 0;
+    margin-bottom: .5rem;
 }
 
-.Experiência li .periodo::before{
+.portifolio li .title.github::before{
     content: "";
     display: inline-block;
     width: 1rem;
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('/assets/img/calender.svg');
+    background-image: url('/img/github.svg');
     margin-right: .5rem;
 }
